syntax = "proto3";

package grpcsimplebank;

import "google/api/annotations.proto";

option go_package = "./;pb";

service TransferService {
    rpc Transfer(TransferRequest) returns (TransferResponse) {
        option (google.api.http) = {
            post: "/v1/transfer"
            body: "*"
        };
    }
    
    // Tambahan: Streaming examples
    rpc GetTransferHistory (HistoryRequest) returns (stream TransferResponse);
    rpc BatchTransfer (stream TransferRequest) returns (TransferSummary);
    rpc LiveTransfer (stream TransferRequest) returns (stream TransferResponse);
}

message TransferRequest {
    int64 from_account_id = 1;
    int64 to_account_id = 2;
    int64 amount = 3;
}

message TransferResponse {
    int64 id = 1;
    int64 from_account_id = 2;
    int64 to_account_id = 3;
    int64 amount = 4;
    string created_at = 5;
}

message HistoryRequest {
  int64 account_id = 1;
}

message TransferSummary {
  int32 success_count = 1;
  int32 failed_count = 2;
}